# fluorine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg-configuration.json  vcpkg.json
cmake/: ProjectSettings.cmake  fluorineConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
examples/: CMakeLists.txt  elo_zoo.cpp  match.cpp  perft_test.cpp  tairitsu.cpp
lib/: CMakeLists.txt
lib/include/fluorine/: export.h
lib/include/fluorine/arena/: player.h  random_player.h  searching_player.h
lib/include/fluorine/core/: board.h  game.h  macros.h
lib/include/fluorine/evaluation/: endgame_solver.h  evaluator.h  linear_pattern_evaluator.h  midgame_searcher.h  training.h  transposition_table.h
lib/include/fluorine/utils/: humanize.h  perft.h  tui.h
lib/src/arena/: random_player.cpp  searching_player.cpp
lib/src/core/: board.cpp  flip.cpp  flip.h  game.cpp
lib/src/evaluation/: endgame_solver.cpp  evaluator.cpp  iterate_moves.h  linear_pattern_evaluator.cpp  midgame_searcher.cpp  training.cpp  transposition_table.cpp
lib/src/utils/: bit.h  perft.cpp  tui.cpp
tests/: CMakeLists.txt  example.cpp
