function (add_example TGT)
    add_executable(${TGT} "${TGT}.cpp")
    set_target_properties(${TGT} PROPERTIES FOLDER examples)
    target_set_output_dirs(${TGT})
    target_link_libraries(${TGT} PRIVATE project_options fluorine::fluorine)
    target_set_cxx_std(${TGT})
endfunction ()

add_example(elo_zoo)
add_example(match)
add_example(perft_test)
add_example(playground)
add_example(tairitsu)
